# cli-mon-showdown

./: .gitignore  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  Makefile  README.md  calc_wrapper.js  cli.py  cli_improved.py  dashboard.html  dashboard.py  dev.py  enhanced_battle_system.py  gemini_agent.py  integration_example.py  items.py  package-lock.json  package.json  poke_env_agent.py  pyproject.toml  remote_showdown.py  requirements.txt  run_poke_env.py  server.py  setup.cfg  showdown_wrapper.py  simulate_turn.js  teamutils.js  test.py  test_laguna.py
.github/workflows/: publish.yml  test-build.yml
dist_test/: cli_mon_showdown-0.1.3-py3-none-any.whl
frontend/: index.html  main.js  style.css
src/cli_mon_showdown/: cli.py
teams/: error_test_p1.txt  error_test_p2.txt  p1.txt  p1_destiny_bond.txt  p2.txt  p2_destiny_bond_ko.txt  test_ko_switch.txt  test_ko_switch_p1.txt  test_p1.txt  test_p2.txt
