[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-mon-showdown"
version = "0.1.2"
description = "Command line interface for battling with a local Pokemon Showdown simulator"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "papichoolo" }
]
dependencies = [
    "google-genai>=0.3.0",
    "pydantic>=2.5"
]
keywords = ["pokemon", "showdown", "cli", "battle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities"
]

[project.scripts]
cli-mon = "cli_mon_showdown.cli:main"

[project.urls]
Homepage = "https://github.com/papichoolo/cli-mon-showdown"
Repository = "https://github.com/papichoolo/cli-mon-showdown"
Issues = "https://github.com/papichoolo/cli-mon-showdown/issues"

[tool.setuptools.packages.find]
where = ["src"]
