[metadata]
name = cli-mon-showdown
version = 0.1.3
description = Command line interface for battling with a local Pokemon Showdown simulator
long_description = file: README.md
long_description_content_type = text/markdown
author = papichoolo
url = https://github.com/papichoolo/cli-mon-showdown
project_urls =
    Homepage = https://github.com/papichoolo/cli-mon-showdown
    Repository = https://github.com/papichoolo/cli-mon-showdown
    Issues = https://github.com/papichoolo/cli-mon-showdown/issues
keywords = pokemon, showdown, cli, battle
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Games/Entertainment
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cli-mon = cli_mon_showdown.cli:main